--- a/src/index.styl
+++ b/src/index.styl
@@ -14,6 +14,14 @@ $expandSize = 7px
     width: 100%
     border-collapse: collapse
     overflow: auto
+    transform:rotateX(180deg);
+    -ms-transform:rotateX(180deg);
+    -webkit-transform:rotateX(180deg);
+
+  .rt-content
+    transform:rotateX(180deg);
+    -ms-transform:rotateX(180deg);
+    -webkit-transform:rotateX(180deg);
 
   .rt-thead
     display: flex
